반응형 css 적용

--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
     <div class="container">
         <div class="mov">
             <h1>[원프렙 복용방법]</h1>
-            <iframe class="moov" width="560" height="315" src="https://www.youtube.com/embed/SwbfNTtSjTM?si=xs9gf-A7Jms2xF0c"
+            <iframe class="moov" src="https://www.youtube.com/embed/SwbfNTtSjTM?si=xs9gf-A7Jms2xF0c"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <div class="mov2">
-
-        </div>
-        <div class="mov3">
-
         </div>
     </div>
 </body>
