--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="nav">
         <div class="logo">대장장이 내시경</div>
-        <div class="hello">-진단검사와 간호</div>
+        <img src="./colon.png" alt="">
+        <div class="hello">진단검사와 간호</div>
     </div>
 
     <div class="container">
