--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
+
+    <footer>
+    <p>
+        <span>제작 : 강승우</span><br/>
+        <span>이메일 : im.arthur119@gmail.com</span><br/>
+        <span>Copyright 2025. cocoder. All Rights Reserved.</span>
+    </p>
+</footer>
+
 </body>
 
 </html>
