영상 추가 및 미디어쿼리 삭제

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
     <div class="container">
         <div class="mov">
+            <h1>[대장내시경 검사]</h1>
+            <iframe class="moov" src="https://www.youtube.com/embed/dtXJMVSo7nE?si=RI_lpprahQY5VxOV"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="mov">
             <h1>[원프렙 복용방법]</h1>
             <iframe class="moov" src="https://www.youtube.com/embed/SwbfNTtSjTM?si=xs9gf-A7Jms2xF0c"
                 title="YouTube video player" frameborder="0"
